Arreglo animacion emails

--- a/index.html
+++ b/index.html
@@ -4,35 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images.png" type="image/x-icon" />
     <title>Login</title>
   </head>
   <body>
     <section>
-    <div class="form-container">
-      <form>
-        <h2>Login</h2>
-        <div class="input">
-          <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-          <input type="email" required />
-          <label for="email">Email:</label>
-        </div>
-        <div class="input">
-            <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-          <input type="password" required />
-          <label for="password">Contraseña:</label>
-        </div>
-        <div class="recordar">
-            <label><input type="checkbox">Recordar Usuario</label>
+      <div class="form-container">
+        <form>
+          <h2>Login</h2>
+          <div class="input">
+            <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
+            <input type="text" required />
+            <label for="email">Email:</label>
+          </div>
+          <div class="input">
+            <span class="icon"
+              ><ion-icon name="lock-closed-outline"></ion-icon
+            ></span>
+            <input type="password" required />
+            <label for="password">Contraseña:</label>
+          </div>
+          <div class="recordar">
+            <label><input type="checkbox" />Recordar Usuario</label>
             <a href="#">Olvidó su contraseña?</a>
-        </div>
-        <button type="submit">Acceder</button>
-        <div class="register">
+          </div>
+          <button type="submit">Acceder</button>
+          <div class="register">
             <p>No tienes una cuenta? <a href="register.html">Click Aqui</a></p>
-        </div>
-      </form>
-    </div>
+          </div>
+        </form>
+      </div>
     </section>
 
     <!-- links para iconos -->
