--- a/register.html
+++ b/register.html
@@ -4,44 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Register</title>
   </head>
   <body>
     <section>
-    <div class="form2-container">
-      <form>
-        <h2>Register</h2>
-        <div class="input">
-            <span class="icon"><ion-icon name="person-circle-outline"></ion-icon></span>
+      <div class="form2-container">
+        <form>
+          <h2>Register</h2>
+          <div class="input">
+            <span class="icon"
+              ><ion-icon name="person-circle-outline"></ion-icon
+            ></span>
             <input type="text" required />
             <label for="email">Nombre:</label>
           </div>
-        <div class="input">
-          <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-          <input type="email" required />
-          <label for="email">Email:</label>
-        </div>
-        <div class="input">
-            <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-          <input type="password" required />
-          <label for="password">Contraseña:</label>
-        </div>
-        <div class="input">
-            <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-          <input type="password" required />
-          <label for="password">Confirmar Contraseña:</label>
-        </div>
-        <!-- <div class="recordar">
+          <div class="input">
+            <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
+            <input type="text" required />
+            <label for="email">Email:</label>
+          </div>
+          <div class="input">
+            <span class="icon"
+              ><ion-icon name="lock-closed-outline"></ion-icon
+            ></span>
+            <input type="password" required />
+            <label for="password">Contraseña:</label>
+          </div>
+          <div class="input">
+            <span class="icon"
+              ><ion-icon name="lock-closed-outline"></ion-icon
+            ></span>
+            <input type="password" required />
+            <label for="password">Confirmar Contraseña:</label>
+          </div>
+          <!-- <div class="recordar">
             <label><input type="checkbox">Recordar Usuario</label>
             <a href="#">Te olvidaste la contraseña?</a>
         </div> -->
-        <button type="submit">Registrarse</button>
-        <div class="register">
+          <button type="submit">Registrarse</button>
+          <div class="register">
             <p>Ya tienes una cuenta? <a href="index.html">Click Aqui</a></p>
-        </div>
-      </form>
-    </div>
+          </div>
+        </form>
+      </div>
     </section>
 
     <!-- links para iconos -->
